trunk/Archive2/51/3cfebf2b4f7aa8/output
main.cpp: In member function 'std::vector<std::basic_string<char> >& VectorMoveDemo::getVector()':
main.cpp:15:34: error: invalid initialization of non-const reference of type 'std::vector<std::basic_string<char> >&' from an rvalue of type 'std::remove_reference<std::vector<std::basic_string<char> >&>::type {aka std::vector<std::basic_string<char> >}'
         return std::move(results_);
                                  ^
main.cpp:16:5: warning: control reaches end of non-void function [-Wreturn-type]
     }
     ^
